--- a/API_data/data_with_precision/Analysis - Copy.ipynb
+++ b/API_data/data_with_precision/Analysis - Copy.ipynb
@@ -9345,7 +9345,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "455ccb34",
+   "id": "432e055b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9370,7 +9370,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "8da14685",
+   "id": "ccbc31c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9404,7 +9404,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "7c688ca4",
+   "id": "276d0759",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9421,7 +9421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19d5bf25",
+   "id": "67d55690",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -9429,7 +9429,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "633c5d55",
+   "id": "4dfb5268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9438,8 +9438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "b50c065a",
+   "execution_count": 92,
+   "id": "b110dfd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9456,7 +9456,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b814f01d",
+   "id": "3da3c040",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9468,7 +9468,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "32e55eae",
+   "id": "002154ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9480,7 +9480,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3732e50d",
+   "id": "93b3947f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9492,7 +9492,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "e0d9c8a0",
+   "id": "7ae7f126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9502,7 +9502,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "ceb8d2ff",
+   "id": "e508434f",
    "metadata": {},
    "outputs": [
     {
@@ -9524,25 +9524,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "id": "96146fc6",
+   "execution_count": 94,
+   "id": "72f47a9f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ss_16_26_rp_total = [ss_16, ss_17, ss_18, ss_19, ss_20, ss_21, ss_22, ss_23, rp_total]"
+    "ss_16_26_rp_total = [ss_16, ss_17, ss_18, ss_19, ss_20, ss_21, ss_22, ss_23,ss_24,ss_25,ss_26,rp_total]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "51f796f4",
+   "execution_count": 95,
+   "id": "fefea926",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18214, 11)\n"
+      "(19892, 11)\n"
      ]
     }
    ],
@@ -9556,11 +9556,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "cf6c36ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6545, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ss_1_15 = [ss_1, ss_2, ss_3, ss_4, ss_5, ss_6, ss_7, ss_8, ss_10, ss_11, ss_12, ss_13, ss_14, ss_15]\n",
+    "ss_1_15= pd.concat(ss_1_15)#竖着拼\n",
+    " \n",
+    "ss_1_15_rp_total.to_csv('./fenkai/ss_1_15',index=False, sep=',')\n",
+    " \n",
+    "print(ss_1_15.shape)#查看文件大小"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "11eb30fc",
+   "id": "ecd3960e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ss_16_26 = [ss_16, ss_17, ss_18, ss_19, ss_20, ss_21, ss_22, ss_23,ss_24,ss_25,ss_26]\n"
+   ]
   }
  ],
  "metadata": {
