--- a/API_data/data_with_precision/Analysis - Copy.ipynb
+++ b/API_data/data_with_precision/Analysis - Copy.ipynb
@@ -9345,7 +9345,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "432e055b",
+   "id": "41e60224",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9370,7 +9370,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ccbc31c1",
+   "id": "73b0d9c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9404,7 +9404,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "276d0759",
+   "id": "5b87e1f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9421,7 +9421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67d55690",
+   "id": "6525f1c1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -9429,7 +9429,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "4dfb5268",
+   "id": "59d1489f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9439,7 +9439,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "b110dfd4",
+   "id": "d472e5e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9456,7 +9456,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "3da3c040",
+   "id": "f377219f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9468,7 +9468,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "002154ea",
+   "id": "1b3ad5a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9480,7 +9480,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "93b3947f",
+   "id": "8a3a5606",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9492,7 +9492,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7ae7f126",
+   "id": "333b87b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9501,15 +9501,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "e508434f",
+   "execution_count": 97,
+   "id": "8e6b8fae",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(20262, 11)\n"
+     "ename": "TypeError",
+     "evalue": "first argument must be an iterable of pandas objects, you passed an object of type \"DataFrame\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/lg/bb0wlxsj3m7dfbklw8sbp2sc0000gn/T/ipykernel_59019/3098919745.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mss_1_15_rp_total\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mss_1_15_rp_total\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#竖着拼\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mss_1_15_rp_total\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./fenkai/ss_1_15_rp_total.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mss_1_15_rp_total\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m#查看文件大小\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/miniconda3/envs/py38/lib/python3.8/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    310\u001b[0m                 )\n\u001b[0;32m--> 311\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    313\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/miniconda3/envs/py38/lib/python3.8/site-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[1;32m    292\u001b[0m     \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIndexes\u001b[0m \u001b[0mhave\u001b[0m \u001b[0moverlapping\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'a'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    293\u001b[0m     \"\"\"\n\u001b[0;32m--> 294\u001b[0;31m     op = _Concatenator(\n\u001b[0m\u001b[1;32m    295\u001b[0m         \u001b[0mobjs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    296\u001b[0m         \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/miniconda3/envs/py38/lib/python3.8/site-packages/pandas/core/reshape/concat.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, objs, axis, join, keys, levels, names, ignore_index, verify_integrity, copy, sort)\u001b[0m\n\u001b[1;32m    327\u001b[0m     ):\n\u001b[1;32m    328\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mABCSeries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mABCDataFrame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 329\u001b[0;31m             raise TypeError(\n\u001b[0m\u001b[1;32m    330\u001b[0m                 \u001b[0;34m\"first argument must be an iterable of pandas \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m                 \u001b[0;34mf'objects, you passed an object of type \"{type(objs).__name__}\"'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: first argument must be an iterable of pandas objects, you passed an object of type \"DataFrame\""
      ]
     }
    ],
@@ -9517,7 +9524,7 @@
     "\n",
     "ss_1_15_rp_total = pd.concat(ss_1_15_rp_total)#竖着拼\n",
     " \n",
-    "ss_1_15_rp_total.to_csv('./fenkai/ss_1_15_rp_total',index=False, sep=',')\n",
+    "ss_1_15_rp_total.to_csv('./fenkai/ss_1_15_rp_total.csv',index=False, sep=',')\n",
     " \n",
     "print(ss_1_15_rp_total.shape)#查看文件大小"
    ]
@@ -9525,7 +9532,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "72f47a9f",
+   "id": "817dc2ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9535,7 +9542,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "fefea926",
+   "id": "ceee76bd",
    "metadata": {},
    "outputs": [
     {
@@ -9549,7 +9556,7 @@
    "source": [
     "ss_16_26_rp_total = pd.concat(ss_16_26_rp_total)#竖着拼\n",
     " \n",
-    "ss_16_26_rp_total.to_csv('./fenkai/ss_16_26_rp_total',index=False, sep=',')\n",
+    "ss_16_26_rp_total.to_csv('./fenkai/ss_16_26_rp_total.csv',index=False, sep=',')\n",
     " \n",
     "print(ss_16_26_rp_total.shape)#查看文件大小"
    ]
@@ -9557,7 +9564,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "cf6c36ac",
+   "id": "1b69af79",
    "metadata": {},
    "outputs": [
     {
@@ -9572,20 +9579,41 @@
     "ss_1_15 = [ss_1, ss_2, ss_3, ss_4, ss_5, ss_6, ss_7, ss_8, ss_10, ss_11, ss_12, ss_13, ss_14, ss_15]\n",
     "ss_1_15= pd.concat(ss_1_15)#竖着拼\n",
     " \n",
-    "ss_1_15_rp_total.to_csv('./fenkai/ss_1_15',index=False, sep=',')\n",
+    "ss_1_15_rp_total.to_csv('./fenkai/ss_1_15.csv',index=False, sep=',')\n",
     " \n",
     "print(ss_1_15.shape)#查看文件大小"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "id": "98078b39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6175, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ss_16_26 = [ss_16, ss_17, ss_18, ss_19, ss_20, ss_21, ss_22, ss_23,ss_24,ss_25,ss_26]\n",
+    "ss_16_26= pd.concat(ss_16_26)#竖着拼\n",
+    " \n",
+    "ss_16_26_rp_total.to_csv('./fenkai/ss_16_26.csv',index=False, sep=',')\n",
+    " \n",
+    "print(ss_16_26.shape)#查看文件大小"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ecd3960e",
+   "id": "1d2aa6eb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ss_16_26 = [ss_16, ss_17, ss_18, ss_19, ss_20, ss_21, ss_22, ss_23,ss_24,ss_25,ss_26]\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
